--- a/templates/soundmenu.html
+++ b/templates/soundmenu.html
@@ -20,8 +20,8 @@
     <tr class="add-row">
       <th>
         <a>
-          <i class="fa-solid fa-add" style="display: contents"></i> {{localize
-          "diwako-cpred-additions.settings.add-sound"}}
+          <i class="fa-solid fa-add" style="display: contents"></i>
+          {{localize "diwako-cpred-additions.settings.add-sound"}}
         </a>
       </th>
     </tr>
