Actor and token creation, updated strings

--- a/templates/createcover.html
+++ b/templates/createcover.html
@@ -26,16 +26,14 @@
       </th>
       <th>
         <label for="hp"
-          >{{ localize "diwako-cpred-additions.cover.dialog.hp" }}:</label
+          >{{ localize "CPR.global.generic.hitpointsShort" }}:</label
         >
         <input name="hp" id="hp" readonly type="number" />
       </th>
     </tr>
     <tr>
       <th>
-        <label for="height"
-          >{{ localize "diwako-cpred-additions.cover.dialog.height" }}:</label
-        >
+        <label for="height">{{ localize "Height" }}:</label>
         <input
           type="range"
           id="height"
@@ -50,9 +48,7 @@
     </tr>
     <tr>
       <th>
-        <label for="width"
-          >{{ localize "diwako-cpred-additions.cover.dialog.width" }}:</label
-        >
+        <label for="width">{{ localize "Width"}}:</label>
         <input
           type="range"
           id="width"
