Fix HTML templating in create cover token dialog

--- a/templates/createcover.html
+++ b/templates/createcover.html
@@ -1,5 +1,5 @@
 <form autocomplete="off" onsubmit="event.preventDefault()">
-  <p>{{ localize "diwako-cpred-additions.cover.dialog.description" }}</p>
+  <p>{{{ localize "diwako-cpred-additions.cover.dialog.description" }}}</p>
   <br />
   <label for="presets"
     >{{ localize "diwako-cpred-additions.cover.dialog.preset" }}:</label
